# flanner

./: .env  Cargo.toml  LICENSE.txt
src/: bot.rs  chatgpt.rs  lib.rs  main.rs
