[package]
name = "flanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
dptree = "0.3.0"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]